Reolve all versions in the dependency artifact

--- a/judo-runtime-core-dependencies/pom.xml
+++ b/judo-runtime-core-dependencies/pom.xml
@@ -12,6 +12,31 @@
 
     <name>JUDO Runtime Core :: Importable POM dependencies</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <configuration>
+                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                    <pomElements>
+                        <dependencyManagement>resolve</dependencyManagement>
+                        <!-- add more sections to resolve -->
+                    </pomElements>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
