--- a/pom.xml
+++ b/pom.xml
@@ -437,6 +437,7 @@
                 <module>judo-runtime-core-bootstrap-hsqldb</module>
                 <module>judo-runtime-core-bootstrap-postgresql</module>
                 <module>judo-runtime-core-dependencies</module>
+                <module>judo-runtime-core-spring</module>
             </modules>
         </profile>
         <profile>
