--- a/pom.xml
+++ b/pom.xml
@@ -438,6 +438,9 @@
                 <module>judo-runtime-core-bootstrap-postgresql</module>
                 <module>judo-runtime-core-dependencies</module>
                 <module>judo-runtime-core-spring</module>
+                <module>judo-runtime-core-spring-hsqldb</module>
+                <module>judo-runtime-core-spring-postgresql</module>
+
             </modules>
         </profile>
         <profile>
