Spring autoconfiguration feature added

--- a/judo-runtime-core-dependencies/pom.xml
+++ b/judo-runtime-core-dependencies/pom.xml
@@ -249,6 +249,25 @@
             </dependency>
 
             <dependency>
+                <groupId>hu.blackbelt.judo.runtime</groupId>
+                <artifactId>judo-runtime-core-spring</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>hu.blackbelt.judo.runtime</groupId>
+                <artifactId>judo-runtime-core-spring-hsqldb</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>hu.blackbelt.judo.runtime</groupId>
+                <artifactId>judo-runtime-core-spring-postgresql</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+
+            <dependency>
                 <groupId>hu.blackbelt.mapper</groupId>
                 <artifactId>mapper-api</artifactId>
                 <version>${mapper-version}</version>
