--- a/judo-runtime-core-spring/pom.xml
+++ b/judo-runtime-core-spring/pom.xml
@@ -21,6 +21,15 @@
 				<scope>import</scope>
 				<version>${project.version}</version>
 	        </dependency>
+
+            <dependency>
+                <groupId>fr.jmini.ecentral</groupId>
+                <artifactId>eclipse-platform-dependencies</artifactId>
+                <version>4.22</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
