--- a/judo-runtime-core-dispatcher/pom.xml
+++ b/judo-runtime-core-dispatcher/pom.xml
@@ -100,6 +100,11 @@
 
         <dependency>
             <groupId>hu.blackbelt.judo.runtime</groupId>
+            <artifactId>judo-runtime-core-validator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.blackbelt.judo.runtime</groupId>
             <artifactId>judo-runtime-core-accessmanager-api</artifactId>
         </dependency>
 
