--- a/judo-runtime-core-dispatcher/pom.xml
+++ b/judo-runtime-core-dispatcher/pom.xml
@@ -100,6 +100,11 @@
 
         <dependency>
             <groupId>hu.blackbelt.judo.runtime</groupId>
+            <artifactId>judo-runtime-core-validator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.blackbelt.judo.runtime</groupId>
             <artifactId>judo-runtime-core-accessmanager-api</artifactId>
         </dependency>
 
@@ -147,14 +152,10 @@
             <artifactId>mapper-impl</artifactId>
             <scope>test</scope>
         </dependency>
-
-
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>2.6.1</version>
-
         </dependency>
-
     </dependencies>
 </project>
