--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
         <jackson-version>2.11.4</jackson-version>
 
-        <epsilon-runtime-version>1.4.0.20220629_123622_4279f257_develop</epsilon-runtime-version>
+        <epsilon-runtime-version>1.5.0</epsilon-runtime-version>
         <judo-tatami-core-version>1.1.0.20220901_121006_b2120b4c_develop</judo-tatami-core-version>
 
         <!-- Model versions -->
@@ -61,12 +61,12 @@
         <judo-dispatcher-api-version>1.0.2.20220901_121018_b6e9cf92_develop</judo-dispatcher-api-version>
         <judo-operation-utils-version>1.1.0.20220902_155843_fae617e1_develop</judo-operation-utils-version>
 
-        <structured-map-proxy-version>1.1.0.20220807_065738_525bb031_develop</structured-map-proxy-version>
+        <structured-map-proxy-version>1.1.0</structured-map-proxy-version>
 
         <judo-tatami-base-version>1.1.0.20220902_160512_abf46895_develop</judo-tatami-base-version>
 
         <mapper-version>1.0.3.20220301_153541_5a46e1fe_develop</mapper-version>
-        <osgi-filestore-version>1.2.1.20220902_155213_457f0f5e_develop</osgi-filestore-version>
+        <osgi-filestore-version>1.3.0</osgi-filestore-version>
 
         <!-- Code Quality-->
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
