--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 
         <structured-map-proxy-version>1.1.0</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.0.20220902_160512_abf46895_develop</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.0</judo-tatami-base-version>
 
         <mapper-version>1.0.3.20220301_153541_5a46e1fe_develop</mapper-version>
         <osgi-filestore-version>1.3.0</osgi-filestore-version>
