--- a/pom.xml
+++ b/pom.xml
@@ -335,7 +335,6 @@
                 </executions>
             </plugin>
 
-            <!--
            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -343,6 +342,7 @@
                 <configuration>
                     <source>8</source>
                     <doclint>none</doclint>
+                    <failOnError>false</failOnError>
                     <detectJavaApiLink>false</detectJavaApiLink>
                     <tags>
                         <tag>
@@ -377,7 +377,6 @@
                     </execution>
                 </executions>
             </plugin>
-            -->
         </plugins>
 
     </build>
