--- a/pom.xml
+++ b/pom.xml
@@ -335,15 +335,36 @@
                 </executions>
             </plugin>
 
-           <plugin>
+            <plugin>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-maven-plugin</artifactId>
+                <version>1.18.20.0</version>
+                <configuration>
+                    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+                    <outputDirectory>${project.basedir}/target/generated-sources/delombok</outputDirectory>
+                    <addOutputDirectory>false</addOutputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>delombok</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.4.1</version>
                 <configuration>
                     <source>8</source>
-                    <doclint>none</doclint>
-                    <failOnError>false</failOnError>
                     <detectJavaApiLink>false</detectJavaApiLink>
+                    <sourcepath>
+                        ${project.basedir}/target/generated-sources/delombok,
+                        ${project.basedir}/target/generated-sources/antlr4
+                    </sourcepath>
                     <tags>
                         <tag>
                             <name>model</name>
