--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,8 @@
         <!-- Model versions -->
         <judo-meta-rdbms-version>1.0.1.20221006_173508_36b41f9d_develop</judo-meta-rdbms-version>
         <judo-meta-asm-version>1.1.2.20221006_173554_3d80808b_develop</judo-meta-asm-version>
-        <judo-meta-expression-version>1.0.2.20221011_162938_6a293f56_feature_JNG_4151_isDefined_on_all_expressions</judo-meta-expression-version>
-        <judo-meta-expression-asm-version>1.0.2.20221011_164711_0548895c_feature_JNG_4151_isDefined_on_all_expressions</judo-meta-expression-asm-version>
+        <judo-meta-expression-version>1.0.2-SNAPSHOT</judo-meta-expression-version>
+        <judo-meta-expression-asm-version>1.0.2-SNAPSHOT</judo-meta-expression-asm-version>
         <judo-meta-measure-version>1.0.1.20221006_173431_e6b82cd6_develop</judo-meta-measure-version>
         <judo-meta-liquibase-version>1.0.1.20221006_170739_642ebbda_develop</judo-meta-liquibase-version>
         <judo-meta-query-version>1.0.1.20221011_163116_ea0b12af_feature_JNG_4151_isDefined_on_all_expressions</judo-meta-query-version>
@@ -60,7 +60,7 @@
 
         <structured-map-proxy-version>1.2.1.20220927_090501_89bce74f_develop</structured-map-proxy-version>
 
-        <judo-tatami-base-version>1.1.2.20221011_164946_472d7c08_feature_JNG_4151_isDefined_on_all_expressions</judo-tatami-base-version>
+        <judo-tatami-base-version>1.1.2-SNAPSHOT</judo-tatami-base-version>
 
         <mapper-version>1.0.4.20220927_072413_239dbbd8_develop</mapper-version>
         <osgi-filestore-version>1.3.1.20221005_230706_7812eafc_develop</osgi-filestore-version>
