--- a/judo-runtime-core-dispatcher/pom.xml
+++ b/judo-runtime-core-dispatcher/pom.xml
@@ -24,6 +24,7 @@
                 <configuration>
                     <instructions>
                         <Export-Package>hu.blackbelt.judo.runtime.core.dispatcher.*;version=${project.version}</Export-Package>
+                        <Import-Package></Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -85,6 +86,13 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>4.3.12.RELEASE</version>
         </dependency>
 
         <dependency>
