--- a/judo-runtime-core-dao-rdbms-hsqldb/pom.xml
+++ b/judo-runtime-core-dao-rdbms-hsqldb/pom.xml
@@ -25,6 +25,7 @@
                         <Import-Package>
                             ${osgi-default-import},
                             org.springframework.jdbc*;version="[4,6)",
+                            org.springframework.transaction*;version="[4,6)",
                             *
                         </Import-Package>
                     </instructions>
@@ -113,6 +114,10 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
