Add delombok and generated-sources to the sourcepath.

--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,7 @@
                     <doclint>none</doclint>
                     <failOnError>false</failOnError>
                     <detectJavaApiLink>false</detectJavaApiLink>
+                    <sourcepath>${project.basedir}/target/classes;${project.basedir}/target/generated-sources</sourcepath>
                     <tags>
                         <tag>
                             <name>model</name>
